ctype_utf8.result, ctype_utf8.test:   added test case ctype-utf8.c:   bug#11754: SET NAMES utf8 followed by SELECT "A\\" LIKE "A\\" returns 0