strings/ctype-utf8.c
@@ -1557,7 +1557,7 @@ int my_wildcmp_unicode(CHARSET_INFO *cs,
       }
 
       wildstr+= scan;
-      if (w_wc ==  (my_wc_t)escape)
+      if (w_wc ==  (my_wc_t)escape && wildstr < wildend)
       {
         if ((scan= mb_wc(cs, &w_wc, (const uchar*)wildstr,
                          (const uchar*)wildend)) <= 0)
@@ -1629,13 +1629,17 @@ int my_wildcmp_unicode(CHARSET_INFO *cs,
       if ((scan= mb_wc(cs, &w_wc, (const uchar*)wildstr,
                        (const uchar*)wildend)) <=0)
         return 1;
+      wildstr+= scan;
       
       if (w_wc ==  (my_wc_t)escape)
       {
-        wildstr+= scan;
-        if ((scan= mb_wc(cs, &w_wc, (const uchar*)wildstr,
-                         (const uchar*)wildend)) <=0)
-          return 1;
+        if (wildstr < wildend)
+        {
+          if ((scan= mb_wc(cs, &w_wc, (const uchar*)wildstr,
+                           (const uchar*)wildend)) <=0)
+            return 1;
+          wildstr+= scan;
+        }
       }
       
       while (1)
@@ -1661,14 +1665,12 @@ int my_wildcmp_unicode(CHARSET_INFO *cs,
         if (str == str_end)
           return -1;
         
+        str+= scan;
         result= my_wildcmp_unicode(cs, str, str_end, wildstr, wildend,
                                    escape, w_one, w_many,
                                    weights);
-        
         if (result <= 0)
           return result;
-        
-        str+= scan;
       } 
     }
   }
